--- a/app/css/app.less
+++ b/app/css/app.less
@@ -1,10 +1,10 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
-body{
-  background-image: url('../media/bg.svg');
-  background-size: cover;
-  background-attachment: fixed;
-}
+// body{
+//   background-image: url('../media/bg.svg');
+//   background-size: cover;
+//   background-attachment: fixed;
+// }
 
 html, button, input, select, textarea,
 .pure-g [class *= "pure-u"] {
