--- a/app/index.jade
+++ b/app/index.jade
@@ -3,22 +3,18 @@ html(lang='en')
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    title Pure Template
+    title Checkers
     link(rel='stylesheet', href='http://yui.yahooapis.com/pure/0.5.0-rc-1/pure-min.css')
     link(rel='stylesheet', href='http://yui.yahooapis.com/pure/0.5.0-rc-1/grids-responsive-min.css')
     link(rel='stylesheet', href='./css/app.css')
   body
-    h1 Pure Template
 
-    .pure-g
-      .pure-u-1-2
-      .pure-u-1-2
-        a.pure-button(href='http://qrohlf.com/trianglify/') Background SVG Image
-
-    .pure-g
-      .pure-u-1-3: a.pure-button.button-success.button-xsmall(href='http://stage.purecss.io/') Documentation
-      .pure-u-1-3: a.pure-button.button-error.button-xlarge(href='http://stage.purecss.io/grids/') Grids
-      .pure-u-1-3: a.pure-button.button-secondary(href='http://stage.purecss.io/grids/#using-grids-with-custom-fonts') Changing Fonts
+    table
+      tbody
+        - for(var i=0; i < 8; i++)
+          tr
+            - for(var j=0; j < 8; j++)
+              td(data-y=i, data-x=j)
 
     script(src='./js/vendor/jquery-2.1.0.js')
     script(src='./js/source/main.js')
