--- a/app/css/app.less
+++ b/app/css/app.less
@@ -6,6 +6,30 @@
 //   background-attachment: fixed;
 // }
 
+img{
+  max-width:100%;
+  max-height:100%;
+}
+
+.selected{
+  opacity: .5;
+}
+
+.invalid{
+  background-color: red;
+}
+
+.valid{
+  background-color: black;
+}
+
+.invalid, .valid{
+  border-collapse:collapse;
+  border: 2px solid #f6c85d;
+  height: 100px;
+  width: 100px;
+}
+
 html, button, input, select, textarea,
 .pure-g [class *= "pure-u"] {
   /* Set your content font stack here: */
